Fri Feb 14 18:42:12 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Local_Name_Space_T.cpp:
          Fixed coverity warning about unitialized pointer fields

Fri Feb 14 18:37:45 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/IO_Cntl_Msg.inl:
          Fixed coverity warning about unitialized fields

Fri Feb 14 18:11:59 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * apps/gperf/src/Key_List.cpp:
          Fixed problems with old style casts.
          Yogesh Sharma <Yogesh dot Sharma at saabsensis dot com> for
          reporting the bug and supplying a patch. Closes [BUGID:4115].

Fri Feb 14 16:34:46 UTC 2014  Steve Huston  <shuston@riverace.com>

        * ace/Dev_Poll_Reactor.cpp (dispatch_io_event): Do not dispatch to
          a handler that is suspended. Prevents multiple callbacks to the
          same handler at the same time when multiple threads are dispatching
          and changing registrations at the same time. Fixes Bugzilla 4129.
          Thank you to Alexey Zubko and Howard Finer for both coming up with
          the same answer independently!

        * THANKS: Added Alexey Zubo to the Hall of Fame.

Tue Feb 11 17:54:42 UTC 2014  Abdullah Sowayan  <sowayan@gmail.com>

        * ace/config-macosx-iOS-hardware.h:
        * ace/config-macosx-iOS-simulator.h:
          Use Mavericks (OSX 10.9) as the host build environment.

Tue Feb 11 09:41:16 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-macosx-mavericks.h:
        * ace/config-macosx-mountainlion.h:
          Moved some defines for disabling deprecated functions to the
          mountainlion file

Mon Feb 10 09:19:57 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * docs/Download.html:
        * etc/index.html:
          Updated some links

Sun Feb  9 18:01:10 UTC 2014  Johnny Willemsen  <jwillemsen@remedy.nl>

        * rpmbuild/ace-tao.spec:
          Fixed ACE version
